dropshot/tests/fail/bad_channel13.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel13.rs:22:1
   |
22 | / async fn bad_channel<S: Stuff + Sync + Send + 'static>(
23 | |     _rqctx: RequestContext<S>,
24 | |     _upgraded: WebsocketConnection,
25 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: generics are not permitted for endpoint handlers
  --> tests/fail/bad_channel13.rs:22:21
   |
22 | async fn bad_channel<S: Stuff + Sync + Send + 'static>(
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
